# USB-Monitor

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
include/usb-monitor/: Constants.hpp  Types.hpp
resources/: resources.qrc
resources/config/: known_devices.json  security_rules.json
resources/styles/: dark.qss  light.qss
src/: main.cpp
src/analysis/: BenchmarkTool.cpp  BenchmarkTool.hpp  ProtocolAnalyzer.cpp  ProtocolAnalyzer.hpp
src/core/: BandwidthMonitor.cpp  BandwidthMonitor.hpp  DeviceManager.cpp  DeviceManager.hpp  Logger.cpp  Logger.hpp  PowerManager.cpp  PowerManager.hpp  UsbDevice.cpp  UsbDevice.hpp
src/gui/: DeviceTreeWidget.cpp  DeviceTreeWidget.hpp  MainWindow.cpp  MainWindow.hpp  SystemTrayIcon.cpp  SystemTrayIcon.hpp  TopologyView.cpp  TopologyView.hpp
src/security/: DeviceAuthorizer.cpp  DeviceAuthorizer.hpp  SecurityManager.cpp  SecurityManager.hpp
src/utils/: ConfigManager.cpp  ConfigManager.hpp  ExportManager.cpp  ExportManager.hpp
tests/: CMakeLists.txt  main.cpp  test_BandwidthMonitor.cpp  test_DeviceManager.cpp  test_PowerManager.cpp  test_UsbDevice.cpp
